--- a/WebContent/mainStyle.css
+++ b/WebContent/mainStyle.css
@@ -1,26 +1,54 @@
 @CHARSET "UTF-8";
 
+body {
+	font-family: courier new;
+}
+
 h1 {
-	
+	display: block;
+	margin: auto;
 }
 
 p {
 
 }
 
+table {
+	display: block;
+	margin: auto;
+	width: auto;
+}
+
 input[type="submit"]{
-	
+	display: block;
+	margin: auto;
+	padding: 0.1em 4em;
+	width: auto;
+	font-family: courier new;
+	font-size: 1em;
 }
 
 input[type="text"], input[type="password"]{
 	
 }
 
+form {
+	margin: auto;
+}
+
 .mainbody{
-	
+	width: 40%;
+	padding: 2em;
+	margin: auto;
 }
 
 .loginbox{
-	
+	margin: 0.5em auto;
+	text-align: center;
+}
+
+.inputrow{
+	margin: auto;
+	padding: 0.5em 2em;
 }
 
